@@ -13,6 +13,11 @@ FIELDSETS_KEY = 'plone.supermodel.fieldsets'   # list of fieldsets
 XML_NAMESPACE = u"http://namespaces.plone.org/supermodel/schema"
 
 
+class ISchema(IInterface):
+    """Describes a schema as generated by this library
+    """
+
+
 class IModel(Interface):
     """Describes a model as generated by this library
     """
@@ -24,7 +29,7 @@ class IModel(Interface):
                                 key_type=zope.schema.TextLine(title=u"Schema name",
                                         description=u"Default schema is under the key u''."),
                                 value_type=zope.schema.Object(title=u"Schema interface",
-                                        schema=IInterface))
+                                        schema=ISchema))
 
 
 class IFieldset(Interface):
@@ -40,6 +45,20 @@ class IFieldset(Interface):
     fields = zope.schema.List(title=u"Field names",
                               value_type=zope.schema.TextLine(title=u"Field name"))
 
+
+class ISchemaPlugin(Interface):
+    """A named adapter that provides additional functionality during schema
+    construction.
+    
+    Execution is deferred until the full supermodel environment is available.
+    """
+
+    order = zope.schema.Int(title=u"Order", required=False,
+                            description=u"Sort key for plugin execution order")
+
+    def __call__():
+        """Execute plugin
+        """
 
 class IXMLToSchema(Interface):
     """Functionality to parse an XML representation of a schema and return
